# simple-rdkafka

./: Cargo.toml  LICENSE-MIT  README.md
src/: config.rs  consumer.rs  dlq.rs  lib.rs  producer.rs  retryable.rs
