[package]
name = "simple-rdkafka"
version = "0.0.1"
edition = "2024"
authors = ["Jeremy Gagnier <jer.gagnier@gmail.com>"]
description = "Provides producer and consumer wrappers to enable easy application development of performant streaming applications."
license = "MIT OR Apache-2.0"

[dependencies]
ciborium = "0.2.2"
env_logger = "0.11.10"
log = "0.4.29"
rdkafka = "0.39.0"
serde = "1.0.228"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
